@@ -1,3 +1,12 @@
+2015-01-18 Riccardo Mottola <rm@gnu.org>
+
+	* GRImage.h
+    * GRImage.m
+    Add primtive GRImage implementation
+    
+    * GRDocView.m
+    Support for pasting images and generating GRImages
+  
 2015-01-03 Riccardo Mottola <rm@gnu.org>
 
 	* GRBezierPath.m (initFromData)
